# thorchain-package

./: .gitignore  CONTRACT_DEPLOYMENT_TEST_RESULTS.md  CONTRACT_DEPLOYMENT_TEST_RESULTS_UPDATED.md  DEMO_EXECUTION_REPORT.md  DEMO_GUIDE.md  FINAL_MIMIR_SOLUTION.md  FINAL_PERMISSION_TEST_EVIDENCE.md  FINAL_SOLUTION_SUMMARY.md  GUARANTEED_MIMIR_SOLUTION.md  IMPLEMENTATION_ROADMAP.md  MIMIR_CONFIGURATION_GUIDE.md  MIMIR_OVERVIEW.md  PERMISSION_SYSTEM_TEST_RESULTS.md  README.md  README_PREFUNDED_ACCOUNTS.md  TESTING_METHODOLOGY.md  TESTING_PLAN_DETAILED.md  TESTING_PLAN_SUMMARY.md  TESTING_SUMMARY_2025_08_19.md  TEST_VALIDATION_CHECKLIST.md  THORCHAIN_DEPLOYMENT_VALIDATION.md  THORCHAIN_WASM_MIMIR_REPORT.md  WASM_DEPLOYMENT_SOLUTION_SUMMARY.md  bifrost-config-local.yaml  deployment-report-forked-20250814-160237.json  deployment-report-local-20250814-160121.json  example_prefunded.yaml  genesis.json  kurtosis.yml  main.star  test_final.wat  test_forking.yaml  validation-report-20250814-160243.json
contracts/cw20-token/: Cargo.toml
contracts/cw20-token/src/: lib.rs
docs/: MIMIR_WASMPERMISSIONLESS_OVERVIEW.md  README_PREFUNDED_ACCOUNTS.md
examples/: bifrost-config-stub.yaml  docker-compose-bifrost.yml  enhanced-testing-config.yaml  forking-1.0.10.yaml  forking-disabled.yaml  forking-enabled.yaml  forking-existing-genesis.yaml  forking-genesis.yaml  grpc-forking.yaml  mimir-working.yaml  test-contract-deployment.sh  wasm-enabled.yaml
scripts/: build-contracts.sh  configure-mimir.sh  demo-setup.sh  deploy-actual-contracts.sh  deploy-contracts.sh  run-complete-demo.sh  (+6 more)
(+56 files in other folders)
